--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -3,19 +3,22 @@ body {
 	min-height: 100vh;
 	flex-direction: column;
 	font-family: 'Francois One', sans-serif;
-
+	
 }
 
-main {
-	flex: 1 0 auto;
-	color: #ce160a;
-	text-align: center;
-	background-color:  #e6e6e6;
+
+
+#mainid {
+	background: url(/images/nlb.jpeg) no-repeat center center fixed; 
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;*/
 }
 
 nav {
 	background-color: #ce160a ;
-
+	
 }
 
 footer.page-footer {
@@ -31,3 +34,13 @@ nav .brand-logo {
 footer.page-footer {
 	margin-top: 0px;
 }
+
+main {
+	flex: 1 0 auto;
+	color: #ce160a;
+	text-align: center;
+	-webkit-filter: blur(0px);     
+    filter: blur(0px);  
+}
+
+
