--- a/views/index.pug
+++ b/views/index.pug
@@ -1,7 +1,7 @@
 html
 	head
 		link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/css/materialize.min.css')
-		link(rel='stylesheet', href='css/custom.css', type='text/css')
+		link(rel='stylesheet', href='css/main.css', type='text/css')
 		link(href='https://fonts.googleapis.com/css?family=Francois+One', rel='stylesheet')
 
 	body
