--- a/views/index.pug
+++ b/views/index.pug
@@ -29,7 +29,7 @@ html
 									span.card-title 
 								.card-content
 									p JAA! HET KLOPT
-									p Gister voorspelde Piet:
+									p Gisteren voorspelde Piet:
 									if result.compare_temp_day === true
 										p de temperatuur goed
 									else 
@@ -44,7 +44,7 @@ html
 									span.card-title 
 								.card-content
 									p NOU.. OP HET RANDJE PIET
-									p Gister voorspelde Piet:
+									p Gisteren voorspelde Piet:
 									if result.compare_temp_day === true
 										p de temperatuur goed
 									else 
@@ -59,7 +59,7 @@ html
 									span.card-title 
 								.card-content
 									p 50/50, BEETJE JAMMER PIET
-									p Gister voorspelde Piet:
+									p Gisteren voorspelde Piet:
 									if result.compare_temp_day === true
 										p de temperatuur goed
 									else 
@@ -74,7 +74,7 @@ html
 									span.card-title 
 								.card-content
 									p DIT KAN ECHT NIET! WAT EEN GEK!
-									p Gister voorspelde Piet:
+									p Gisteren voorspelde Piet:
 									if result.compare_temp_day === true
 										p de temperatuur goed
 									else 
@@ -89,7 +89,7 @@ html
 									span.card-title 
 								.card-content
 									p JEZUS PIET, JE ZIT ER WEER EENS HE-LE-MAAL NAAST!!
-									p Gister voorspelde Piet:
+									p Gisteren voorspelde Piet:
 									if result.compare_temp_day === true
 										p de temperatuur goed
 									else 
@@ -100,7 +100,7 @@ html
 			.container
 				.row
 					.col.l6.s12
-						h5.white-text Met piet weet je het nooit 
+						h5.white-text Met Piet weet je het nooit 
 						p.grey-text.text-lighten-4 Die vent doet echt maar wat
 						p.grey-text.text-lighten-4 Maar wees een beetje lief voor hem
 					
