--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 body {
   display: flex;
   min-height: 100vh;
@@ -10,6 +11,7 @@ body {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover; }
+
 
 nav {
   background-color: #ce160a; }
